# catfish

./: .gitignore  JohnBordello_eval.pt
engine/: CMakeLists.txt
engine/config/: config.john
engine/include/: Engine.hpp  Eval.hpp  Move.hpp  Parser.hpp  constants.hpp
engine/src/: main.cpp
engine/src/engine/: Engine.cpp  Eval.cpp
engine/src/parser/: Parser.cpp
model/: JohnBordello_eval.pt  johnBordello.pt
model/dataset/: install.sh
model/src/: board_evaluation.ipynb
src/: board_evaluation.ipynb  board_evaluation.py  data_visualization.ipynb
